--- a/config/sync/language/de/views.view.media.yml
+++ b/config/sync/language/de/views.view.media.yml
@@ -68,6 +68,9 @@ display:
         langcode:
           expose:
             label: Sprache
+        field_categories_target_id:
+          expose:
+            label: Kategorien
         field_tags_target_id:
           expose:
             label: Tags
