--- a/config/sync/language/fr/views.view.content.yml
+++ b/config/sync/language/fr/views.view.content.yml
@@ -54,6 +54,9 @@ display:
         langcode:
           expose:
             label: Langue
+        field_categories_target_id:
+          expose:
+            label: Catégories
         field_tags_target_id:
           expose:
             label: Étiquettes
