--- a/config/sync/language/nl/views.view.media.yml
+++ b/config/sync/language/nl/views.view.media.yml
@@ -68,6 +68,9 @@ display:
         langcode:
           expose:
             label: Taal
+        field_categories_target_id:
+          expose:
+            label: Categorieën
         field_tags_target_id:
           expose:
             label: Labels
