--- a/config/sync/language/de/views.view.files.yml
+++ b/config/sync/language/de/views.view.files.yml
@@ -81,6 +81,7 @@ display:
           label: 'Registrierendes Modul'
         count:
           label: 'Anzahl der Verwendung'
+          format_plural_string: !!binary MQNAY291bnQ=
       title: Dateinutzung
       arguments:
         fid:
